# Interpreter

./: AddAutomaton.cpp  AddAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  Database.h  Datalog.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.h  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.h  L_ParenAutomaton.cpp  L_ParenAutomaton.h  Lexer.cpp  Lexer.h  MCommentAutomaton.cpp  MCommentAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q_markAutomaton.cpp  Q_markAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  R_Paren.cpp  R_Paren.h  Relations.h  Rule.cpp  Rule.h  RulesAutomaton.cpp  (+13 more)
